# apps/runner/pkg/api/docs/swagger.json
@@ -2108,6 +2108,10 @@
                     "type": "integer",
                     "minimum": 0
                 },
+                "capacityGiB": {
+                    "type": "integer",
+                    "minimum": 0
+                },
                 "metaUrl": {
                     "type": "string"
                 }
